# kpkpass

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  KPimPkPassConfig.cmake.in  README.md  REUSE.toml  add_license.sh  metainfo.yaml  org_kde_kpkpass.categories
autotests/: CMakeLists.txt  fieldtest.cpp  pkpasstest.cpp
autotests/data/: apple-store-UA-sample-unsigned-scrubbed.pkpass
src/: CMakeLists.txt  application-vnd-apple-pkpass.xml  application-vnd-apple-pkpasses.xml  barcode.cpp  barcode.h  boardingpass.cpp  boardingpass.h  field.cpp  field.h  kpkpass-index.qdoc  kpkpass.qdoc  kpkpass.qdocconf  location.cpp  location.h  pass.cpp  pass.h  pass_p.h  passes.cpp  passes.h  seat.cpp  seat.h
src/pkpass/: CMakeLists.txt
src/qml/: CMakeLists.txt  types.h
src/quick/: AuxiliaryFieldsGrid.qml  CMakeLists.txt  FieldLabel.qml  types.h
